<resources>
    <string name="app_name">CAREER GUIDE</string>
    <string name="title_activity_flowchart">ScrollingActivity</string>
    <string name="large_text">

    </string>
    <string name="action_settings">Settings</string>
    <string name="if_you_are_opting_science_then_you_will_have_to_study_pcm_physics_chemistry_and_mathematics_core_subjects_along_with_biology_or_computer_science_or_electronics_or_it_depending_on_further_studies_apart_from_these_core_subjects_languages_will_be_a_part_of_the_curriculum_too">If you are opting science then you will have to study PCM (Physics, Chemistry and Mathematics – Core subjects) along with Biology or Computer Science or Electronics or IT (depending on further studies). Apart from these core subjects, languages will be a part of the curriculum too.</string>
    <string name="afer_10th_major_options_available_are">Afer 10th Major options available are :</string>
    <string name="_1_class_xi_class_xii">1. Class XI – Class XII</string>
    <string name="it_is_two_years_of_preparatory_studies_of_a_course_three_main_streams_are_available_to_study_which_are_given_below">It is two years of preparatory studies of a course. Three main streams are available to study which are given below:</string>
    <string name="i_science">i) Science –</string>
    <string name="ii_commerce">ii) Commerce –</string>
    <string name="the_core_subjects_of_commerce_are_business_economics_accountancy_business_study_and_business_law_not_just_these_but_you_will_have_exposure_to_income_tax_accounting_marketing_and_other_related_subjects">The core subjects of commerce are – Business Economics, Accountancy, Business Study and Business Law. Not just these, but you will have exposure to income tax, accounting, marketing, and other related subjects</string>
    <string name="iii_arts_humanities">iii) Arts/Humanities –</string>
    <string name="with_a_great_number_of_choices_to_study_arts_offers_a_wide_range_of_options_that_are_no_less_in_comparison_to_science_and_commerce_students_can_study_sociology_history_literature_psychology_political_science_philosophy_economics_etc_along_with_compulsory_language_subject">With a great number of choices to study, arts offers a wide range of options that are no less in comparison to science and commerce. Students can study sociology, history, literature, psychology, political science, philosophy, economics, etc along with compulsory language subject.</string>
    <string name="_2_polytechnic_diploma_courses">2. Polytechnic Diploma courses</string>
    <string name="polytechnic_diploma_courses_are_diploma_courses_one_can_join_after_class_x_or_class_xii_the_3_year_course_offers_many_options_to_study_mechanical_computer_science_civil_automobile_bio_technology_agriculture_architecture_textile_technology_chemical_marine_technology_bio_medical_etc">Polytechnic Diploma courses are Diploma courses one can join after Class X or Class XII. The 3 year course offers many options to study – Mechanical, Computer Science, Civil, Automobile, Bio-Technology, Agriculture, Architecture, Textile technology, Chemical, Marine technology, Bio-Medical etc.</string>
    <string name="_3_paramedical_courses">3. Paramedical Courses</string>
    <string name="the_paramedical_branch_is_related_to_allied_healthcare_sector_and_just_like_medical_courses_paramedical_courses_provide_good_opportunities_with_regard_to_career_this_course_trains_the_students_who_later_work_as_healthcare_workers_and_technicians_healthcare_industry_is_huge_and_the_roles_that_are_to_play_are_numerous">The Paramedical branch is related to allied healthcare sector and just like Medical courses, paramedical courses provide good opportunities with regard to career. This course trains the students who later work as healthcare workers and technicians. Healthcare industry is huge and the roles that are to play are numerous.</string>
    <string name="after_10th_major_options_available_are">After 10th major options available are</string>
    <string name="_4_industrial_trading_institute_iti">4. Industrial Trading Institute (ITI)</string>
    <string name="iti_comes_under_directorate_general_of_employment_training_dget_it_is_a_government_training_institute_which_trains_students_and_makes_them_skilled_in_various_industries_training_will_be_provided_in_mechanical_work_electronics_information_technologies_fabrication_automobile_diesel_mechanics_lift_mechanics_computer_software_sheet_metal_electrical_plumbing_wiring_etc_it_is_similar_to_a_diploma_but_the_duration_of_the_course_varies">ITI comes under Directorate General of Employment Training (DGET). It is a government training institute which trains students and makes them skilled in various industries. Training will be provided in Mechanical work, Electronics, Information Technologies, Fabrication, Automobile, Diesel Mechanics, Lift Mechanics, Computer Software, Sheet metal, Electrical, Plumbing, Wiring etc. It is similar to a diploma, but the duration of the course varies.</string>
    <string name="still_confused">Still confused ??</string>
    <string name="dont_worry_give_a_quick_quiz_test_and_get_to_know_about_your_interests">Dont Worry ! Give a quick quiz test and get to know about your interests.</string>
    <string name="give_test">Give Test</string>
    <string name="_1_are_you_good_in_making_deals">1. Are you good in making deals?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="_2_do_you_like_budget_planning">2.Do you like budget planning?</string>
    <string name="are_you_interested_in_space">Are you interested in space?</string>
    <string name="_3_are_you_interested_in_space_stars_moons_planets">3.Are you interested in space (stars ,moons,planets)?</string>
    <string name="_4_have_you_been_curious_about_internal_body_parts_of_human_animals_and_how_they_function">4.Have you been curious about internal body parts of human , animals and how they function ?</string>
    <string name="_6_do_you_have_interest_about_reaading_our_ancient_culture_and_history">6.Do you have interest about reading our ancient culture and history ?</string>
    <string name="are_you_interested_in_computers_machines_gadgets_and_technology">Are you interested in computers , machines, gadgets and technology?</string>
    <string name="_7_are_you_interested_in_computers_gadgets_and_technologies">7.Are you interested in computers, gadgets, and technologies ?</string>
    <string name="_8_do_you_have_interest_in_knowing_about_world_map_different_places_on_globe">8. Do you have interest in knowing about world map , different places on globe ?</string>
    <string name="do_you_like_other_curricular_activities_like_dancing_singing_drawing_more_than_studying">Do you like other curricular activities like dancing , singing , drawing more than studying ?</string>
    <string name="submit">Submit</string>
    <string name="_9_do_you_like_other_curricular_activities_like_dancing_singing_and_drawing">9.Do you like other curricular activities like dancing , singing and drawing</string>
    <string name="opting_for_science_stream_opens_up_both_medical_and_non_medical_career_options_including_medical_science_engineering_and_other_interdisciplinary_careers_top_schools_in_greater_noida_if_interested_in_a_medical_field_you_will_have_to_include_biology_along_with_physics_and_chemistry_as_your_core_subject_combination_while_for_engineering_you_will_have_to_replace_biology_for_mathematics_or_computer_science_as_the_core_subject_by_studying_in_science_stream_after_10th_students_can_opt_to_pursue_the_further_higher_education_in_diverse_fields_such_as_biochemistry_bioinformatics_cytology_dental_science_genetics_pharmaceuticals_space_exploration_biotechnology_metallurgy_forensic_science_and_many_others_besides_the_ever_popular_medical_and_engineering_options">Opting for science stream opens up both medical and non-medical career options, including medical science, engineering, and other interdisciplinary careers. \n\n You will have to include Biology along with Physics and Chemistry as your core subject combination, while for engineering, you will have to replace biology for mathematics or computer science as the core subject.\n\nBy studying in science stream after 10th, students can opt to pursue the further higher education in diverse fields such as Biochemistry, Bioinformatics, Cytology, Dental Science, Genetics, Pharmaceuticals, Space Exploration, Biotechnology, Metallurgy, Forensic Science, and many others, besides the ever popular medical and engineering options.</string>
    <string name="well_done_it_seems_that_you_are_interested_in_science">Well done ! It seems that you are interested in Science .</string>
    <string name="career_guide_wishes_you_good_luck_for_your_future">Career guide wishes you good luck for your future !</string>
    <string name="result">Result</string>
    <string name="well_done_it_seems_that_you_are_interested_in_arts">Well Done ! It seems that you are interested in Arts .</string>
    <string name="apart_from_getting_a_chance_to_learn_diverse_fields_such_as_politics_sociology_social_service_literature_journalism_philosophy_and_psychology_students_can_opt_for_many_professional_courses_after_studying_arts_stream_in_current_times_art_students_have_many_stable_job_opportunities_in_the_market_ach_college_offers_a_different_set_of_subjects_to_arts_students_after_10th_the_overall_nature_of_the_syllabus_though_is_similar_across_india_learning_english_and_one_other_language_is_compulsory_apart_from_that_students_are_allowed_to_take_various_combinations_of_subjects_if_you_wish_to_study_a_particular_subject_checking_it_on_college_websites_would_be_ideal">Apart from getting a chance to learn diverse fields such as politics, sociology, social service, literature, journalism, philosophy and psychology, students can opt for many professional courses after studying arts stream. \n\nIn current times, art students have many stable job opportunities in the market.ach college offers a different set of subjects to Arts students after 10th.\n\n The Overall nature of the syllabus though is similar across India. Learning English and one other language is compulsory.\n\n Apart from that, students are allowed to take various combinations of subjects, also if you are really passionate about dancing, singing , drawing etc you can easily give time to such activities and can make career in it. \nIf you wish to study a particular subject, checking it on college websites would be ideal.</string>
</resources>